styles.css
* {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

img {
  max-width: 30vw;
  max-height: auto;
}

#navbar-container {
  background-color: white;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 2rem;
  padding: 1rem;
}

#navbar-content {
  display: flex;
  justify-content: space-between;
  padding-left: 3rem;
  padding-right: 3rem;
  align-items: center;
}

#navbar-logo {
  font-size: 1.4rem;
}

#navbar-sections {
  display: flex;
  gap: 1.5rem;
}

#navbar-container a {
  text-decoration: none;
  color: black;
}

#hero-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100vw;
  padding-left: 8rem;
  padding-right: 8rem;
  margin-bottom: 0.25rem;
  margin-top: 2rem;
}

#avatar {
  max-width: 35vw;
}

#hero-container-text-content {
  width: 40vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#hero-container-text-content h1 {
  font-size: 2.5rem;
}

#hero-container-text-content h2 {
  font-style: italic;
  font-size: 1.35rem;
}

#hero-container-text-content p {
  margin-bottom: 2rem;
}

.contact-button,
#contact-container form .contact-button {
  padding: 1rem;
  width: 12.5rem;
  border-radius: 5rem;
  text-decoration: none;
  cursor: pointer;
  border: none;
  font-size: 1.25rem;
  background-color: black;
  color: white;
  transition: ease-in-out 0.5s;
}

.contact-button:hover {
  transform: scale(1.1);
}

#gallery-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 0.5rem;
  padding: 3rem;
}

.gallery-column {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

#contact-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-content: space-around;
  gap: 5rem;
  padding-left: 8rem;
  padding-right: 8rem;
}

#contact-container form {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  justify-content: center;
}

#contact-container form input,
#message {
  padding: 0.75rem;
  border: none;
  border-bottom: 2px solid black;
  background-color: rgb(245, 245, 245);
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

#contact-container form input:focus,
#message:focus {
  background-color: rgb(243, 249, 252);
}

.form-element {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

#footer-container {
  background-color: black;
  color: white;
  width: 100vw;
  height: 75vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#social-media-links-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.social-media-link {
  color: white;
  text-decoration: none;
  transition: ease-in-out 0.5s;
}

.social-media-link:hover {
  transform: scale(1.1);
  font-size: 1.05rem;
}

